--- a/Week2/index.html
+++ b/Week2/index.html
@@ -11,31 +11,36 @@
  	<link rel="stylesheet" href="css/font-awesome.min.css">
 </head>
 <body>
-	<nav class="navbar navbar-default">
-  		<div class="container-fluid">
-    		<div class="navbar-header">
-      			<a class="navbar-brand" href="#">
-        		<img alt="Brand" src="images/Stamford-logo.png">
-      			</a>
-    		</div>
-  		</div>
-	</nav>
+	<div class="container">
+		<nav class="navbar navbar-default">
+  			<div class="container-fluid">
+    			<div class="navbar-header">
+      				<a class="navbar-brand" href="#"><img alt="Brand" src="https://dassheep.github.io/ITE220/Week2/images/stamford-logo.png" width="100" height="34"></a>
+    			</div>
+    			<ul class="nav navbar-nav">
+      <li class="active"><a href="#">Home</a></li>
+      <li><a href="#">Science & Technology</a></li>
+    </ul>
+  			</div>
+
+		</nav>
+ 	</div>
  	<div class="container">
  		<div class="row">
  			<div class="col-md-4">
-				<img class="img-circle" src="images/Stamford-logo.png" />
+				<img class="img-circle" src="http://placehold.it/140x140" />
 				<h2>Heading</h2>
 				<p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
 				<p><a class="btn btn-default" href="#" role="button">View details »</a></p>
 			</div>
 			<div class="col-md-4">
-				<img class="img-circle" src="images/Stamford-logo.png" />
+				<img class="img-circle" src="http://placehold.it/140x140" />
 				<h2>Heading</h2>
 				<p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
 				<p><a class="btn btn-default" href="#" role="button">View details »</a></p>
 			</div>
 			<div class="col-md-4">
-				<img class="img-circle" src="images/Stamford-logo.png" />
+				<img class="img-circle" src="http://placehold.it/140x140" />
 				<h2>Heading</h2>
 				<p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
 				<p><a class="btn btn-default" href="#" role="button">View details »</a></p>
@@ -53,7 +58,7 @@
  			</div>
  		</div>
  		<hr>
- 		<footer>Trin Arunsiritrakoon © Stamford University International</footer>	
+ 		<footer> <i class="fa fa-spinner fa-spin"></i> Trin Arunsiritrakoon © Stamford University International</footer>	
  	</div>
 </body>
 </html>
