--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 					<h1>Trin Arunsiritrakoon</h1>
 					<p>Web Development 2 Work Collection</p>
 				</div>
-				<h4><a href="week1/index.html">Week 1</a></h4>
+				<h4><a href="Week1/index.html">Week 1</a></h4>
 				<p>Introduction to bootstrap/ Refresher / Google Fonts</p><br>
-				<h4><a href="week2/index.html">Week 2</a></h4>
+				<h4><a href="Week2/index.html">Week 2</a></h4>
 				<p>Bootstrap Basics</p><br>
-				<h4><a href="week3/index.html">Week 3</a></h4>
+				<h4><a href="Week3/index.html">Week 3</a></h4>
 				<p>JavaScript Basics</p><br>
 
 			</div>
