--- a/index.html
+++ b/index.html
@@ -14,17 +14,18 @@
 			<div class="row">
 				<div class="jumbotron col-md-12">
 					<h1>Trin Arunsiritrakoon</h1>
-					<p>Web Development 2 Work Collection</p>
+					<p>Web Development 2 Work Collection<p>
 				</div>
 				<h4><a href="Week1/index.html">Week 1</a></h4>
-				<p>Introduction to bootstrap/ Refresher / Google Fonts</p><br>
+				<p>Introduction to <a href="http://getbootstrap.com/">Bootstrap</a> / Refresher / <a href="https://fonts.google.com/">Google Fonts</a></p><br>
 				<h4><a href="Week2/index.html">Week 2</a></h4>
-				<p>Bootstrap Basics</p><br>
+				<p><a href="http://getbootstrap.com/">Bootstrap</a> Basics / <a href="http://fontawesome.io/">AwesomeFont</a></p><br>
 				<h4><a href="Week3/index.html">Week 3</a></h4>
 				<p>JavaScript Basics</p><br>
 
 			</div>
-			
+			<footer>All contents are under <a href="LICENSE">MIT License</a> © 2017 <a href="mailto:trintin7@gmail.com">Trin Arunsirtrakoon</a> ID:<a href="mailto:trin.arunsiritrakoon@students.stamford.edu">25310091</a> | Stamford International University</footer>
 		</div>
+
 	</body>
 </html>
