--- a/index.html
+++ b/index.html
@@ -4,29 +4,32 @@
 		<title>ITE220 Work</title>
 			<!-- Latest compiled and minified CSS -->
 	 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7"crossorigin="anonymous">
- <!-- Optional theme -->
-	 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r"crossorigin="anonymous">
- <!-- Latest compiled and minified JavaScript -->
- 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+ 		<!-- Optional theme -->
+	 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r"crossorigin="anonymous">
+ 		<!-- Latest compiled and minified JavaScript -->
+ 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 	</head>
 	<body>
 		<div class="container">
 			<div class="row">
 				<div class="jumbotron col-md-12">
 					<h1>Trin Arunsiritrakoon</h1>
-					<p>Web Development 2 Work Collection<p>
+					<p>Web Development 2 Work Collection</p>
 				</div>
-				<h4><a href="Week1/index.html">Week 1</a></h4>
-				<p>[22-11-2016] Introduction to <a href="http://getbootstrap.com/">Bootstrap</a> / Refresher / <a href="https://fonts.google.com/">Google Fonts</a></p><br>
-				<h4><a href="Week2/index.html">Week 2</a></h4>
-				<p>[29-11-2016] <a href="http://getbootstrap.com/">Bootstrap</a> Basics / <a href="http://fontawesome.io/">AwesomeFont</a></p><br>
-				<h4><a href="Week3/index.html">Week 3</a></h4>
-				<p>[02-12-2016] JavaScript Basics</p><br>
-				<h4><a href="Week4/index.html">Week 4</a></h4>
-				<p>[06-12-2016] TBA</p><br>
+				<div class="col-md-12">
+					<h4><a href="Week1/index.html">Week 1</a>  <small>[22-11-2016]</small></h4>
+					<blockquote><p>Introduction to <a href="http://getbootstrap.com/">Bootstrap</a> / Web Development 1 Refresher / <a href="https://fonts.google.com/">Google Fonts</a></p></blockquote><hr><br>
+					<h4><a href="Week2/index.html">Week 2</a>  <small>[29-11-2016]</small></h4>
+					<blockquote><p><a href="http://getbootstrap.com/">Bootstrap</a> Basics / <a href="http://fontawesome.io/">AwesomeFont</a></p></blockquote><hr><br>
+					<h4><a href="Week3/index.html">Week 3</a>  <small>[02-12-2016]</small></h4>
+					<blockquote><p>JavaScript Basics</p></blockquote><hr><br>
+					<h4><a href="Week4/index.html">Week 4</a>  <small>[06-12-2016]</small></h4>
+					<blockquote><p>TBA</p></blockquote><hr><br>
+				</div>
+				<div class="jumbotron col-md-12">
+					<footer>All contents are provided under <a href="LICENSE">MIT License</a> © 2017 <a href="mailto:trintin7@gmail.com">Trin Arunsirtrakoon</a> ID:<a href="mailto:trin.arunsiritrakoon@students.stamford.edu">25310091</a> | Stamford International University</footer>
+				</div>
 			</div>
-			<div class="jumbotron">
-			<footer>All contents are under <a href="LICENSE">MIT License</a> © 2017 <a href="mailto:trintin7@gmail.com">Trin Arunsirtrakoon</a> ID:<a href="mailto:trin.arunsiritrakoon@students.stamford.edu">25310091</a> | Stamford International University</footer></div>
 		</div>
 	</body>
 </html>
