--- a/index.html
+++ b/index.html
@@ -20,11 +20,15 @@
 					<h4><a href="Week1/index.html">Week 1</a>  <small>[22-11-2016]</small></h4>
 					<blockquote><p>Introduction to <a href="http://getbootstrap.com/">Bootstrap</a> / Refresher / <a href="https://fonts.google.com/">Google Fonts</a></p></blockquote><br>
 					<h4><a href="Week2/index.html">Week 2</a>  <small>[29-11-2016]</small></h4>
-					<blockquote><p><a href="http://getbootstrap.com/">Bootstrap</a> Basics / <a href="http://fontawesome.io/">AwesomeFont</a></p></blockquote><br>
+					<blockquote><p><a href="http://getbootstrap.com/">Bootstrap</a> Basics / <a href="http://fontawesome.io/">Font Awesome</a></p></blockquote><br>
 					<h4><a href="Week3/index.html">Week 3</a>  <small>[02-12-2016]</small></h4>
 					<blockquote><p>JavaScript Basics</p></blockquote><br>
 					<h4><a href="Week4/index.html">Week 4</a>  <small>[06-12-2016]</small></h4>
 					<blockquote><p>TBA</p></blockquote><br>
+						<!-- Start Template
+						<h4><a href="WeekX/index.html">Week X</a>  <small>[DD-MM-2016]</small></h4>
+						<blockquote><p>TBA</p></blockquote><br>
+							End Template-->
 				</div>
 			</div>
 			<div class="jumbotron">
