--- a/Week3/index.html
+++ b/Week3/index.html
@@ -24,9 +24,17 @@
 		 			<img src="images/t-shirt.jpg" width="100%">
 		 		</div>
 		 		<div class="col-md-6 jumbotron">
-		 			<h2>Hello, <span id="customer-name">CUSTOMER</span>!</h2>
+		 			<h2>Good <span id="time-of-day">morning</span> <span id="customer-name">CUSTOMER</span>!</h2>
 					<p>Thank you for your order.</p>
-					<h3>Only $<span id="total-price">$XXX</span> for Brooklyn T-Shirts</h3>
+					<ul id="product-list" class="list-group">
+						<li class="list-group-item">
+							<span class="badge">$10</span>
+							Product 1
+						</li>
+					</ul>
+					<h4> Total price: $<span id="total-price-bd">XXX</span></h4>
+					<h4> Discount: %<span id="discount-percent">00</span></h4>
+					<h3>Net total: $<span id="total-price">$XXX</span> </h3>
 					<p><a class="btn btn-primary btn-lg" href="#"role="button">Pay now</a></p>
 		 		</div>
 		 	</div>
