Week 3 v1.2 Changed alignment and text color

--- a/Week3/index.html
+++ b/Week3/index.html
@@ -24,7 +24,7 @@
 		 			<img src="images/t-shirt.jpg" width="100%">
 		 		</div>
 		 		<div class="col-md-6 jumbotron">
-		 			<h2>Good <span id="time-of-day">morning</span> <span id="customer-name">CUSTOMER</span>!</h2>
+		 			<h2>Good <span id="time-of-day">TIME</span> <span id="customer-name">CUSTOMER</span>!</h2>
 					<p>Thank you for your order.</p>
 					<ul id="product-list" class="list-group">
 						<li class="list-group-item">
@@ -32,10 +32,10 @@
 							Product 1
 						</li>
 					</ul>
-					<h4> Total price: $<span id="total-price-bd">XXX</span></h4>
-					<h4> Discount: %<span id="discount-percent">00</span></h4>
-					<h3>Net total: $<span id="total-price">$XXX</span> </h3>
-					<p><a class="btn btn-primary btn-lg" href="#"role="button">Pay now</a></p>
+					<h4 style="text-align: right;"> Total price: $<span id="total-price-bd">XXX</span></h4>
+					<h4 style="text-align: right;""> Discount: <span style="color: green">%</span><span style="color: green" id="discount-percent">00</span></h4>
+					<h3 style="text-align: right;"">Net total: $<span id="total-price">$XXX</span> </h3>
+					<p style="text-align: right;""><a class="btn btn-primary btn-lg" href="#"role="button">Pay now</a></p>
 		 		</div>
 		 	</div>
 		 </div>
