--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 	<head>
 		<title>ITE220 Work</title>
+		<!-- Font Awesome Link -->
+		<link rel="stylesheet" href="css/font-awesome.min.css">
 		<!-- Latest compiled and minified CSS -->
 	 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7"crossorigin="anonymous">
  		<!-- Optional theme -->
@@ -13,26 +15,26 @@
 		<div class="container">
 			<div class="row">
 				<div class="jumbotron col-md-12">
-					<h1>Trin Arunsiritrakoon</h1>
-					<p>Web Development 2 Work Collection<p>
+					<h1><i class="fa fa-file-code-o" aria-hidden="true"></i> Trin Arunsiritrakoon</h1>
+					<p><i class="fa fa-globe" aria-hidden="true"></i> Web Development 2 Work Collection<p>
 				</div>
 				<div class="col-md-12">
-					<h4><a href="Week1/index.html">Week 1</a>  <small>[22-11-2016]</small></h4>
-					<blockquote><p>Introduction to <a href="http://getbootstrap.com/">Bootstrap</a> / Refresher / <a href="https://fonts.google.com/">Google Fonts</a></p></blockquote><br>
-					<h4><a href="Week2/index.html">Week 2</a>  <small>[29-11-2016]</small></h4>
-					<blockquote><p><a href="http://getbootstrap.com/">Bootstrap</a> Basics / <a href="http://fontawesome.io/">Font Awesome</a></p></blockquote><br>
-					<h4><a href="Week3/index.html">Week 3</a>  <small>[02-12-2016]</small></h4>
-					<blockquote><p>JavaScript Basics</p></blockquote><br>
-					<h4><a href="Week4/index.html">Week 4</a>  <small>[06-12-2016]</small></h4>
-					<blockquote><p>TBA</p></blockquote><br>
+					<h4><a href="Week1/index.html">Week 1</a>  <i class="fa fa-calendar" aria-hidden="true"></i><small>[22-11-2016]</small></h4>
+					<blockquote><p>Introduction to <a href="http://getbootstrap.com/">Bootstrap</a> / Refresher / <a href="https://fonts.google.com/">Google Fonts</a></p><iframe src="Week1/index.html" height="768" width="1024"></iframe></blockquote><br>
+					<h4><a href="Week2/index.html">Week 2</a>  <i class="fa fa-calendar" aria-hidden="true"></i><small>[29-11-2016]</small></h4>
+					<blockquote><p><a href="http://getbootstrap.com/">Bootstrap</a> Basics / <a href="http://fontawesome.io/">Font Awesome</a></p><iframe src="Week2/index.html" height="768" width="1024"></iframe></blockquote><br>
+					<h4><a href="Week3/index.html">Week 3</a>  <i class="fa fa-calendar" aria-hidden="true"></i><small>[02-12-2016]</small></h4>
+					<blockquote><p>JavaScript Basics</p><iframe src="Week3/index.html" height="768" width="1024"></iframe></blockquote><br>
+					<h4><a href="Week4/index.html">Week 4</a>  <i class="fa fa-calendar" aria-hidden="true"></i><small>[06-12-2016]</small></h4>
+					<blockquote><p>TBA</p><iframe src="Week4/index.html" height="768" width="1024"></iframe></blockquote><br>
 				</div>
 			</div>
 			<div class="jumbotron">
-			<footer>All contents are under <a href="LICENSE">MIT License</a> © 2017 <a href="mailto:trintin7@gmail.com">Trin Arunsirtrakoon</a> ID:<a href="mailto:trin.arunsiritrakoon@students.stamford.edu">25310091</a> | Stamford International University</footer></div>
+			<footer>All contents are under <a href="LICENSE">MIT License</a> <i class="fa fa-copyright" aria-hidden="true"></i> 2017 <a href="mailto:trintin7@gmail.com">Trin Arunsirtrakoon</a> ID:<a href="mailto:trin.arunsiritrakoon@students.stamford.edu">25310091</a> | Stamford International University</footer></div>
 		</div>
 	</body>
 </html>
 <!-- Start Template
-<h4><a href="WeekX/index.html">Week X</a>  <small>[DD-MM-2016]</small></h4>
-<blockquote><p>TBA</p></blockquote><br>
-	End Template-->
+					<h4><a href="Week0/index.html">Week 0</a>  <i class="fa fa-calendar" aria-hidden="true"></i><small>[00-00-2016]</small></h4>
+					<blockquote><p>TBA</p><iframe src="Week0/index.html" height="768" width="1024"></iframe></blockquote><br>
+End Template-->
