Main index v1.7a Added back to top button

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 					<blockquote><p>JavaScript Basics</p><iframe src="Week3/index.html" height="768" width="1024"></iframe></blockquote><br>
 					<h4><a href="Week4/index.html">Week 4</a>  <i class="fa fa-calendar" aria-hidden="true"></i><small>[06-12-2016]</small></h4>
 					<blockquote><p>TBA</p><iframe src="Week4/index.html" height="768" width="1024"></iframe></blockquote><br>
+					<a href="#top"><p style="text-align: right;">Back to top</p></a>
 				</div>
 			</div>
 			<div class="jumbotron">
