--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 					<h4><a href="Week3/index.html">Week 3</a>  <i class="fa fa-calendar" aria-hidden="true"></i><small>[02-12-2016]</small></h4>
 					<blockquote><p>JavaScript Basics</p><iframe src="Week3/index.html" height="768" width="1024"></iframe></blockquote><br>
 					<h4><a href="Week4-2/index.html">Week 4</a>  <i class="fa fa-calendar" aria-hidden="true"></i><small>[06-12-2016]</small></h4>
-					<blockquote><p>Shopping JS v2</p><iframe src="Week4/index.html" height="768" width="1024"></iframe></blockquote><br>
+					<blockquote><p>Shopping JS v2</p><iframe src="Week4-2/index.html" height="768" width="1024"></iframe></blockquote><br>
 					<a href="#top"><p style="text-align: right;">Back to top</p></a>
 				</div>
 			</div>
